CLI frontend with ncurses

--- a/.gitignore
+++ b/.gitignore
@@ -31,16 +31,6 @@ playground.xcworkspace
 Packages/
 .build/
 
-# CocoaPods
-Pods/
-
-# Carthage
-Carthage/Checkouts
-Carthage/Build
-
-# fastlane
-fastlane/report.xml
-fastlane/Preview.html
-fastlane/screenshots
-fastlane/test_output
+# Vagrant
+.vagrant
 
